# apify-google-trends-skill

./: .coderabbit.yaml  .gitignore  CLAUDE.md  CODE_PRINCIPLES.md  README.md  SKILL.md  pyproject.toml  reference.md
docs/superpowers/plans/: 2026-03-16-apify-google-trends-skill.md
docs/superpowers/specs/: 2026-03-16-apify-google-trends-skill-design.md
openspec/: config.yaml
scripts/: query_trends.py
src/apify_google_trends_skill/: __init__.py  client.py  constants.py  exceptions.py  models.py
tests/: conftest.py  test_client.py  test_models.py
