[project]
name = "apify-google-trends-skill"
version = "0.1.0"
description = "Agent Skill for querying Google Trends via Apify REST API"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "respx>=0.22.0",
    "ruff>=0.15.6",
    "pyright>=1.1.408",
    "pytest-asyncio>=0.25.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
